fixed bug with devour buttons, align devour buttons, remove buttons from devoured list, and added gif to readme file

--- a/public/assets/css/burgerStyle.css
+++ b/public/assets/css/burgerStyle.css
@@ -65,7 +65,7 @@ li {
 }
 /* =======================  Devour Button =========================*/
 #change-devour {
-	margin-left: auto;
+	margin-left: 10px;
 }
 
 .btn.btn-primary {
